Major Fix! Added new values for database in Migration. Refactored and moved files